// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render external link 1`] = `
<DocumentFragment>
  <a
    class="bgm-link"
    href="https://test.com"
    style="font-size: 16px; font-weight: bold;"
  />
</DocumentFragment>
`;

exports[`should render internal link 1`] = `
<DocumentFragment>
  <a
    class="bgm-link"
    href="/a"
    style="font-size: 16px; font-weight: bold;"
  />
</DocumentFragment>
`;
